tdf#162304 layoutInCell: native ODT handling from top of PRINT_AREA

Making ODF work the same way that MSO does.
Since this was the intention all along,
I'm not going to bother with a compat flag
for older documents.

It is highly unlikely that a native ODF user would have all these:
-turned on follow text flow
-used "page text area" when trying to orient from top of cell
 (more likely to use "entire page" if they do associate page<->cell.
-set a larger border spacing (since default is a miniscule 0.05cm).
-this code-path is only in effect with FROM_TOP,
 an unlikely combination with "page text area".

Change-Id: I979e6e0526102004c56285db6e7479c0ff6d660e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171610
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>